fdo#64761: sw: avoid another ~SwIndexReg assert

SwXText::convertToTextFrame(): This one is rather spurious since the
local variables aren't used later anyway, so just park them  somewhere safe.

Change-Id: I47d3092fbf22a228fa3f440602c0affa43fbb6d7
(cherry picked from commit 0e86210bc480de38919aacf709513f95fab26d35)